--- a/src/css/MindfulFocus.css
+++ b/src/css/MindfulFocus.css
@@ -117,7 +117,7 @@
     font-size: 1.75vw;
     margin-bottom: 0px;
     margin-block-start: 2%;
-    color: #39B54A
+    color: #8B3DD9
 }
 
 .mobileH5 {
@@ -127,7 +127,7 @@
     margin-bottom: 0px;
     margin-inline-start: 4%;
     margin-block-start: 5%;
-    color: #39B54A
+    color: #8B3DD9
 }
 
 #overview-container {
