--- a/src/css/CertCard.css
+++ b/src/css/CertCard.css
@@ -17,6 +17,7 @@
     box-shadow: 0px 5px 25px -10px #404040;
     margin-inline: 25px;
     background-color: white;
+    margin-block: 25px;
     cursor: pointer;
     padding: 0px;
     border: none;
@@ -71,5 +72,6 @@
     min-height: 30%;
     min-width: 80%;
     padding: 5px 10px 10px 20px;
+    margin-bottom: 15px;
     z-index: 3;
 }
