--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,60 +4,64 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  background-color: #202124;
-  width: 100%;
+  background-color: #242323;
   overflow: hidden;
 }
 
 .App-header {
-  background-color: #202124;
-  min-height: 100vh;
-  min-width: 20vw;
+  height: 5vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   position: fixed;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-  font-size: calc(10px + 2vmin);
+  flex: 1;
+  justify-content: flex-end;
+  font-size: calc(10px + 1vmin);
   color: #E1E2E2;
-  z-index: 5;
-  padding-inline: 15px;
+  z-index: 11;
 }
 
 .Mobile-header {
-  background-color: #202124;
   min-height: 8vh;
-  min-width: 100vw;
   display: flex;
-  flex-direction: column;
+  flex: 1;
+  background-color: #242323;
+  flex-direction: row;
   position: fixed;
   align-items: center;
-  justify-content: center;
-  align-content: center;
+  justify-content: flex-end;
   font-size: calc(10px + 2vmin);
   color: #E1E2E2;
   z-index: 5;
+  width: 100%;
 }
 
 .navigation {
-  text-align: center;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  max-height: 5vh;
+  max-width: 40%;
   color: #E1E2E2;
+  overflow: hidden;
+  justify-content: flex-end;
+  box-sizing: border-box;
+}
+
+.navigation a {
   margin-inline: 15px;
 }
 
 #burgMenu {
   display: flex;
-  flex-direction: row;
   flex: 1;
-  width: 90%;
+  flex: row;
   justify-content: flex-end;
-  align-content: center;
   align-items: center;
 }
 
 #burgButton {
-  background-color: #202124;
   border: none;
   color: white;
   transform: scale(1.5);
@@ -72,30 +76,32 @@ a {
 h5 {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
-  font-size: 2.1vh;
+  font-size: 4vh;
 }
 
 #mobile-h5 {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 3.5vh;
-}
-
-#headIMG {
-  width: 14vw;
-  padding-top: 30%;
+  text-align: left;
 }
 
 #contact-info {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: flex-start;
   font-family: 'Roboto', sans-serif;
   text-align: center;
+  width: 100%;
 }
 
 #email-text {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 18px;
-  color: #FFB600;
   text-decoration: none;
 }
 
@@ -116,14 +122,14 @@ h5 {
   border-radius: 50%;
 }
 
-.App-Main {
+/*.App-Main {
   min-height: 100vh;
   max-width: 80vw;
   margin-left: 20vw;
-}
+}*/
 
 .Mobile-Main {
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
 }
 
@@ -138,18 +144,14 @@ h5 {
   width: 125vw;
 }
 
-#landingQuote {
-  position: absolute;
-  z-index: 2;
-  max-height: 5vh;
-  max-width: 20vw;
-  top: 10vh;
-  right: 5vw;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  font-size: 36px;
-  text-align: right;
-  color: #202124;
+.dash-blink{
+  animation: 
+    blink-caret 1.5s step-end infinite;
+}
+
+@keyframes blink-caret {
+  from, to { opacity: 0 }
+  50% { opacity: 1 }
 }
 
 #mobileLanding {
@@ -161,7 +163,7 @@ h5 {
   align-content: center;
   min-height: 5vh;
   padding-top: 10vh;
-  background-color: #202124;
+  background: linear-gradient(135deg, #ffa467 15%, #ff5164 85%);
 }
 
 .image-cropper-mobile {
@@ -177,8 +179,7 @@ h5 {
 }
 
 #headIMGMobile {
-  width: 45vw;
-  padding-top: 25%;
+  width: 25vw;
 }
 
 #mobileLandingsubheader {
@@ -201,22 +202,29 @@ h5 {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 12px;
-  color: #FFB600;
+  color: #242323;
   text-decoration: none;
   margin: 0px auto 15px auto;
 }
 
 #linkedInIcon {
-  color: #FFB600;
+  color: #ff5164;
   transform: translateY(2px);
 }
 
 #about, #education, #certifications, #projects {
   display: flex;
+  position: relative;
   flex: 1;
   flex-direction: row;
-  max-height: 100vh;
+  min-height: 100vh;
+  width: 100%;
+  background-color: #242323;
+  justify-content: center;
+  align-items: flex-start;
   overflow: hidden;
+  z-index: 5;
+  padding-bottom: 25;
 }
 
 #aboutMobile, #educationMobile, #certificationsMobile, #projectsMobile {
@@ -224,10 +232,11 @@ h5 {
   flex: 1;
   flex-wrap: wrap;
   flex-direction: column;
+  justify-content: flex-start;
 }
 
 #educationMobile {
-  background-color: #202124;
+  background-color: #242323;
 }
 
 #container-mobile {
@@ -235,7 +244,7 @@ h5 {
   flex-direction: column;
   flex-wrap: wrap;
   text-align: justify;
-  min-height: 100vh;
+  height: fit-content;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   box-sizing: border-box;
@@ -243,46 +252,127 @@ h5 {
 }
 
 #about-left {
+  display: flex;
+  flex: 1;
+  height: fit-content;
+  position: relative;
+  flex-direction: column;
   min-width: 35vw;
-  background-color: white;
+  max-width: 45vw;
   padding: 50px 75px 100px 50px;
-  text-align: justify;
+  text-align: center;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  font-size: 0.8vw;
+  font-size: 1.75em;
 }
 
-#about-right, #about-right-ucf {
+#about-left p, h5 {
+  color: #FFFFFF
+}
+
+#container-mobile p, h5 {
+  color: #FFFFFF
+}
+
+#api-console{
+  background-color: #363434;
+  height: 45vh;
+  width: 35vw;
+  border-radius: 35px;
+  margin-inline-start: 25px;
+  border: 3px solid #ff5164;
+  overflow: hidden;
+}
+
+#api-console-mobile{
+  background-color: #363434;
+  height: 45vh;
+  width: 35vw;
+  border-radius: 35px;
+  margin-top: 15px;
+  border: 3px solid #ff5164;
+  overflow: hidden;
+  margin-bottom: 25px;
+}
+
+.api-button-text{
+  font-family: Roboto; 
+  font-size: 1em;
+  color: #FFFFFF;
+}
+
+.api-call-button{
+  border: 3px solid #ff5164;
+  height: 20%;
+  width: 10%;
+  background-color: #242323;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.api-code-lines{
+  list-style: none;
+  text-indent: -1.5em;
+  height: 100%;
+}
+
+.api-code-lines li{
+  text-align: left;
+  height: 8.5%;
+  color: #FFFFFF;
+  opacity: 0.5;
+  font-size: 1.25em;
+}
+
+#education-child-container{
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  min-width: 40vw;
-  background-color: #202124;
-}
-
-#about-right-ucf{
+  flex-direction: row;
+  flex: 2;
+  width: 100%;
+  flex-wrap: nowrap;
   justify-content: center;
 }
 
-#skillsBox {
-  max-height: 50vh;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 25px;
+#education-child-container-mobile{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  flex-wrap: nowrap;
+  justify-content: center;
 }
 
-#ucfLogo {
-  max-height: 40vh;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .degreeContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  flex-wrap: wrap;
+  position: relative;
   padding: 0px 15px 15px 15px;
   border-radius: 25px;
-  border: 3px solid #FFB600;
+  border: 3px solid #ff5164;
+  margin-inline: 15px;
+}
+
+.degreeContainerMobile{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  flex-wrap: wrap;
+  position: relative;
+  padding: 0px 15px 15px 15px;
+  border-radius: 25px;
+  border: 3px solid #ff5164;
+  margin-inline: 15px;
+  margin-block: 15px;
+}
+
+.degreeContainer p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.8em;
+  text-align: left;
 }
 
 .twoColumnList {
@@ -290,11 +380,13 @@ h5 {
   flex-direction: column;
   flex: 3;
   flex-wrap: wrap;
-  max-height: 13vh;
+  list-style-position: outside;
 }
 
 .twoColumnList li{
   margin-inline-start: 10px;
+  color: #FFFFFF;
+  text-align: left;
 }
 
 .singleColumnList {
@@ -303,25 +395,32 @@ h5 {
   flex: 1;
   flex-wrap: wrap;
   padding-bottom: 25px;
+  list-style-position: outside;
 }
 
 .singleColumnList li {
   color: white;
   padding-block-start: 5px;
+  text-align: left ;
 }
 
 .fullWidth {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
   flex-wrap: wrap;
-  min-width: 80vw;
-  max-width: 80vw;
-  background-color: white;
+  background: linear-gradient(135deg, #ffa467 15%, #ff5164 85%);
   padding: 50px 75px 100px 50px;
   align-content: center;
+  align-items: center;
 }
 
 .fullWidthMobile {
-  min-width: 100vw;
-  background-color: white;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background: linear-gradient(135deg, #ffa467 15%, #ff5164 85%);
   align-content: center;
   justify-content: center;
   align-items: center;
@@ -333,11 +432,11 @@ h5 {
 .fullWidthBody {
   display: flex;
   flex-direction: row;
-  flex: 1;
+  flex: 2;
   flex-wrap: wrap;
   align-content: center;
+  align-items: center;
   justify-content: center;
-  width: 90%;
   height: fit-content;
 }
 
@@ -362,26 +461,30 @@ h5 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   flex: 2;
   max-height: 60vh;
-  min-width: 10vw;
 }
 
 #skillAssessContainer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #202124;
+  position: relative;
+  background-color: #242323;
   border-radius: 35px;
-  min-width: 14vw;
+  width: 14vw;
+  max-height: 60vh;
   padding: 0px 20px 20px 20px;
+  cursor: pointer;
 }
 
 #skillAssessMobile{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #202124;
+  background-color: #FFFFFF;
   border-radius: 35px;
   min-width: 14vw;
   box-sizing: border-box;
@@ -389,11 +492,126 @@ h5 {
   padding: 0px 20px 25px 20px;
 }
 
+
+#skillList{
+  list-style-position: outside;
+  text-indent: -3.3em;
+  padding-left: 3.3em;
+}
+
 #skillList li {
-  color: white;
+  color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  font-size: large;
+  font-size: 2em;
   padding-top: 5px;
   text-align: left;
+}
+
+.popup-parent{
+  position: absolute; 
+  height: 100vh;
+  width: 100%;
+  z-index: 20;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+}
+
+.popup-parent-mobile{
+  position: absolute; 
+  height: 100vh;
+  width: 100%;
+  z-index: 20;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-blur{
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  z-index: 20;
+  align-self: center;
+  background-color: #242323;
+  opacity: 0.5;
+}
+
+.popup-main{
+  display: flex; 
+  flex-direction: column;
+  flex: 1;
+  position: absolute;
+  justify-content: flex-start;
+  align-items: center;
+  height: 80vh;
+  width: 50vw;
+  background-color: #363434;
+  border-radius: 25px;
+  opacity: 1;
+  z-index: 20;
+  border: 2px solid #ff1564;
+  overflow: hidden;
+}
+
+.popup-main-mobile{ 
+  display: flex; 
+  flex-direction: column;
+  flex: 1;
+  flex-wrap: wrap;
+  position: absolute;
+  height: 60vh;
+  width: 85vw;
+  background-color: #363434;
+  border-radius: 27px;
+  opacity: 1;
+  z-index: 20;
+  border: 2px solid #ff1564;
+  overflow: hidden;
+}
+
+.popup-text-container{
+  display: flex; 
+  flex-direction: column;
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.popup-text-container-mobile{
+  display: flex; 
+  flex-direction: column;
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  padding-inline: 25px;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.popup-body{
+  font-family: 'Montserrat', sans-serif; 
+  font-weight: 400;
+  font-size: 1vw;
+  color: #000000;
+  text-align: center;
+}
+
+.popup-body-mobile{
+  font-family: 'Montserrat', sans-serif; 
+  font-weight: 400;
+  font-size: 4vw;
+  color: #000000;
+  text-align: center;
 }
