--- a/src/css/Carousel.css
+++ b/src/css/Carousel.css
@@ -1,11 +1,10 @@
 .carousel-container{
     display: flex;
+    flex: 1;
     flex-direction: row;
     max-width: 100%;
-    max-height: 45vh;
-    min-height: 45vh;
+    height: 45vh;
     margin-top: 5vh;
-    flex-wrap: wrap;
     justify-content: center;
     align-content: center;
 }
@@ -13,14 +12,14 @@
 .carousel-container-mobile{
     display: flex;
     flex-direction: row;
-    max-width: 100%;
-    max-height: 45vh;
-    min-height: 45vh;
+    width: 100%;
+    height: 45vh;
     margin-top: 0;
     padding-top: 0;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
+    padding-bottom: 50px;
 }
 
 .featureVideo{
@@ -39,22 +38,23 @@
 
 .carousel-buttons {
     border: none;
-    background-color: #e2e4e4;
     width: 10%;
     border-radius: 25px;
     overflow: hidden;
+    background: none;
 }
 
 .carousel-button-mobile{
     border: none;
-    background-color: #FFFFFA;
-    width: 15%;
+    background-color: none;
+    width: 5%;
     border-radius: 25px;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .carousel-button-icon {
     transform: scale(3.5);
+    color: #242323;
 }
 
 .carousel-button-icon-mobile{
