--- a/src/css/CertCard.css
+++ b/src/css/CertCard.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    background-color: bisque;
+    background-color: #242323;
     max-width: 15vw;
     min-width: 250px;
     min-height: 20vh;
@@ -16,11 +16,9 @@
     overflow: hidden;
     box-shadow: 0px 5px 25px -10px #404040;
     margin-inline: 25px;
-    background-color: white;
     margin-block: 25px;
     cursor: pointer;
     padding: 0px;
-    border: none;
 }
 
 .certContainerMobile{
@@ -30,14 +28,12 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    background-color: white;
     max-width: 90vw;
     min-width: 90vw;
     min-height: 20vh;
     max-height: 30vh;
     border-radius: 35px;
     overflow: hidden;
-    box-shadow: 0px 5px 25px -10px #404040;
     background-color: white;
     margin-block: 25px;
     cursor: pointer;
@@ -46,14 +42,13 @@
 }
 
 .certImg {
-    object-fit: cover;
     width: 100%;
-    height: 70%
+    height: 100%;
 }
 
 .certName {
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    font-size: 1.75em;
     font-weight: 500;
 }
 
@@ -68,10 +63,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: white;
     min-height: 30%;
     min-width: 80%;
     padding: 5px 10px 10px 20px;
     margin-bottom: 15px;
     z-index: 3;
+}
+
+#bottomContainer p {
+    color: #FFFFFF;
 }
