--- a/src/css/DiscordFocus.css
+++ b/src/css/DiscordFocus.css
@@ -4,67 +4,14 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    background-color: #202124;
+    background-color: #242323;
     width: 100%;
     overflow-x: hidden;
 }
 
-
-.sidebar-main {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    flex: 1;
-    max-width: 100%;
-    align-items: center;
-    align-content: flex-start;
-    justify-content: flex-start;
-    margin-bottom: 0;
-    padding-top: "25%";
-}
-  
-.sidebar {
-    background-color: #202124;
-    min-height: 100vh;
-    max-width: 20vw;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    align-items: center;
-    justify-content: flex-start;
-    align-content: center;
-    z-index: 5;
-}
-
-.mobilebar {
-    background-color: #202124;
-    min-height: 8vh;
-    min-width: 100vw;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    font-size: calc(10px + 2vmin);
-    color: #E1E2E2;
-    z-index: 5;
-}
-
-.mobile-nav {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    max-height: 25vh;
-}
-
 .mobileMain {
-    background-color: white;
-    min-width: 100vw;
+    background-color: #242323;
+    width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -73,43 +20,16 @@
     align-content: center;
 }
 
-.links {
-    text-align: center;
-    color: #E1E2E2;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 1.25vw;
-}
-
-.sidebar-title {
-    color: #E1E2E2;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 2.25vw;
-    text-align: center;
-}
-
-.sidebar-title-mobile {
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 7vw;
-    margin-top: 2%;
-    margin-bottom: 5%;
-    text-align: center;
-}
-
 .main{
-    background-color: #E1E2E2;
+    background-color: #242323;
     min-height: 100vh;
-    min-width: 80vw;
+    min-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;  
     justify-content: flex-start;
     align-content: center;
     z-index: 0;
-    margin-left: 20vw;
 }
 
 #bannerImg {
@@ -121,10 +41,21 @@
 .sectionContainer {
     box-sizing: border-box;
     padding: 0px 2% 0px 2%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .mobileContainer {
-    background-color: white;
+    background-color: #363434;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
 }
 
 .sectionHeader {
@@ -133,7 +64,7 @@
     font-size: 1.75vw;
     margin-bottom: 0px;
     margin-block-start: 2%;
-    color: #8B3DD9
+    color: #FFFFFF;
 }
 
 .mobileH5 {
@@ -143,7 +74,7 @@
     margin-bottom: 0px;
     margin-inline-start: 4%;
     margin-block-start: 5%;
-    color: #8B3DD9
+    color: #FFFFFF;
 }
 
 #overview-container {
@@ -151,9 +82,11 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin-inline: 25px;
+    box-sizing: border-box;
     justify-content: center;
     align-items: center;
     align-content: center;
+    width: 100%;
 }
 
 .sectionSubHeader {
@@ -178,17 +111,8 @@
 .mobileP {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    font-size: 4.5vw;
+    font-size: 4vw;
     text-align: justify;
-}
-
-#features-carousel {
-    flex: 1;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
 }
 
 .feature-container {
@@ -196,8 +120,10 @@
     flex-direction: column;
     flex: 2;
     flex-wrap: wrap;
-    min-width: 100%;
-    height: 175vh;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 250vh;
     margin-top: 5vh;
 }
 
@@ -206,8 +132,9 @@
     flex-direction: column;
     flex: 1;
     flex-wrap: wrap;
-    min-width: 100%;
-    margin-top: 5vh;
+    max-width: 100%;
+    height: 400vh;
+    margin-block: 5vh;
 }
 
 .feature-cell {
@@ -219,23 +146,21 @@
     height: fit-content;
     margin: 15px 25px 15px 25px;
     padding: 15px 25px 15px 25px;
-    box-shadow: 0px 10px 50px -35px black;
-    border-radius: 5%;
-    background-color: white;
+    border-radius: 50px;
+    background-color: #242323;
 }
 
 .feature-cell-mobile {
     display: flex;
     flex-direction: column;
     flex: 1;
-    max-width: 100%;
-    min-width: 100%;
-    height: fit-content;
+    flex-wrap: nowrap;
+    max-width: 95%;
+    min-height: fit-content;
     margin: 15px 0px 15px 0px;
     padding: 15px 15px 15px 15px;
-    box-shadow: 0px 10px 50px -35px black;
     border-radius: 25px;
-    background-color: white;
+    background-color: #242323;
     box-sizing: border-box;
 }
 
@@ -243,12 +168,14 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 1.25vw;
+    color: #FFFFFF;
 }
 
 .feature-h2-mobile {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 6.5vw;
+    color: #FFFFFF;
 }
 
 .feature-p {
@@ -256,6 +183,7 @@
     font-weight: 300;
     text-align: justify;
     font-size: 0.85vw;
+    color: #FFFFFF;
 }
 
 .feature-p-mobile {
@@ -263,6 +191,6 @@
     font-weight: 300;
     text-align: justify;
     text-align-last: left;
-    font-size: 4.5vw;
+    font-size: 3vw;
 }
 
