--- a/src/css/ProjectCard.css
+++ b/src/css/ProjectCard.css
@@ -7,15 +7,16 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    background-color: white;
-    min-width: 15vw;
-    max-width: 350px;
-    height: 55vh;
+    background-color: transparent;
+    width: 15vw;
+    height: 40vh;
     overflow: hidden;
     border-radius: 35px;
     margin-inline: 25px;
     margin-block: 25px;
     cursor: pointer;
+    border: 3px solid #ff5164;
+    
 }
 
 .projContainerMobile {
@@ -24,13 +25,14 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    background-color: white;
-    width: 90vw;
-    height: 75vh;
+    background-color: transparent;
+    width: 80vw;
+    height: 90vh;
     overflow: hidden;
     border-radius: 35px;
     cursor: pointer;
     margin-block: 25px;
+    border: 3px solid #ff5164;
 }
 
 .projImage {
@@ -45,7 +47,7 @@
     flex-wrap: wrap;
     height: 60%;
     width: 100%;
-    background-color: white;
+    background-color: transparent;
     box-shadow: 0px -1px 45px -15px black;
     justify-content: flex-start;
     align-items: flex-start;
@@ -59,7 +61,7 @@
     flex: 1;
     height: 50%;
     width: 99%;
-    background-color: white;
+    background-color: transparent;
     box-shadow: 0px -1px 45px -15px black;
     justify-content: flex-start;
     align-items: flex-start;
@@ -72,6 +74,7 @@
     font-size: 24px;
     padding: 0px 15px 0px 15px;
     margin-bottom: 0px;
+    color: #ff5164;
 }
 
 .projInfo p {
@@ -80,4 +83,5 @@
     font-size: 18px;
     text-align: justify;
     padding: 0px 15px 25px 15px;
+    color: #FFFFFF;
 }
